--- a/styles.css
+++ b/styles.css
@@ -63,11 +63,16 @@ h2{
     background-color: #96dfe2;
     padding-right: 2rem;
 }
+/* about */
+.about{
+    margin-left: 1rem;
+    width: 80vh;
+}
 /* article */
 article img{
     border: 4px solid #96dfe2;
     height: 15rem;
-    width: 22rem;
+    width: 90vw;
     filter: brightness(75%);
     transition: 200ms;
     z-index: -1;
@@ -75,7 +80,7 @@ article img{
 }
 .main{
     height: 30rem;
-    width: 22rem;
+    width: 90vw;
 }
 
 article img:hover{
