--- a/styles.css
+++ b/styles.css
@@ -1,41 +1,50 @@
+/* root */
+:root{
+    --color-primary:#96dfe2;
+    --color-secondary:rgb(59, 59, 135);
+}
+/* body */
 body{
     margin: 0;
     background-color: aliceblue;
 }
+h1{
+    display: flex;
+    align-items: center;
+}
+h2, h4{
+    color: rgb(59, 59, 135);
+    padding-right: 2rem;
+    font-size: 1.5rem;
+}
 /* nav */
 nav{
-    background-color: rgb(59, 59, 59);
-    display: flex;
-    gap: 0.5rem;
-    justify-content: center;
-    height: 4rem;
-    justify-content: space-between;
+    background-color: var(--color-secondary);
+  
 }
 nav li {
-    border-bottom: 2px solid #96dfe2 ;
+    border-bottom: 2px solid var(--color-primary) ;
     display: flex; 
     align-items: end ;
+    font-size: 30px;
 }
 ul{
-    gap: 0.5rem;
-    margin-right: 5rem; 
+    gap: 2rem;
+    margin-right: 3rem; 
     display: flex;
     flex-direction: row;
+    font-size: 16px;
 }
 .title{
-    background-color:#96dfe2 ;
+    background-color:var(--color-primary);
     height: 3rem;
     padding-left: 2rem;
     display: flex;
     align-self: center;
     width: 10rem;
 }
-h1{
-    display: flex;
-    align-items: center;
-}
 nav a {
-    color: #96dfe2;
+    color: var(--color-primary);
     text-decoration: none;
 }
 /* hero */
@@ -56,14 +65,9 @@ nav a {
     display: flex;
     justify-content: flex-end;
     position: absolute;
-    background-color: #96dfe2;
-    margin-left: 65%;
+    background-color: var(--color-primary);
+    margin-left: 45%;
     margin-top: 6rem;
-}
-h2, h4{
-    color: rgb(59, 59, 135);
-    padding-right: 2rem;
-    font-size: 1.5rem;
 }
 /* about */
 .about{
@@ -72,7 +76,7 @@ h2, h4{
 }
 /* article */
 article img{
-    border: 4px solid #96dfe2;
+    border: 4px solid var(--color-primary);
     height: 15rem;
     width: 22rem;
     filter: brightness(75%);
@@ -84,7 +88,6 @@ article img{
     height: 30rem;
     width: 22rem;
 }
-
 article img:hover{
     filter: none;
 }
@@ -93,21 +96,56 @@ article img:hover{
 }
  .heading{
     position: absolute;
-    background-color: #96dfe2;
+    background-color: var(--color-primary);
     z-index: 999;
     bottom: 0;
     margin-bottom: 2rem;
     line-height: 0;
 }
+footer ul {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    font-size: 2rem;
+  }
+  footer a {
+    color: rgb(59, 59, 135);
+    border-bottom: 2px solid var(--color-secondary);
+    text-align: justify;
+    flex-grow: 1;
+    margin: 0 10px;
+  }
+/* media queries large screen */
 @media screen and (min-width:768px){
+/* nav */
+    nav{
+        background-color: var(--color-secondary);
+        display: flex;
+        gap: 0.5rem;
+        justify-content: center;
+        height: 4rem;
+        justify-content: space-between;
+    }
+    ul{
+        gap: 2rem;
+        margin-right: 6rem; 
+        display: flex;
+        align-items: center;
+        flex-direction: row;
+        font-size: 30px;
+    }
+/* hero */
+      .subtitle{
+        margin-left: 50%;
+    }
+/* about */
     .aboutMe{
         grid-row: span 1;
-        border-right: 2px solid rgb(59, 59, 135);
+        border-right: 2px solid var(--color-secondary);
         text-align: right;
         padding-right: 1rem;
     }
     .about{
-        background-color: rgb(238, 238, 251);
         flex-wrap: wrap;
         margin: 0 auto;
         text-align: left;
@@ -116,6 +154,7 @@ article img:hover{
             margin-left: 1rem;
             width: 100%;
     }
+ /* grid */
     .grid-control {
         display: grid;
         grid-template-columns: 8rem 1fr 1fr ;
@@ -126,6 +165,7 @@ article img:hover{
         grid-column: span 2;
         width: 100%;
     }
+ /* article */
     article img{
         width: 100%;
         object-fit: cover;
@@ -133,31 +173,18 @@ article img:hover{
     .work{
         grid-row: span 3;
         grid-column: span 1;
-        border-right: 2px solid rgb(59, 59, 135);
+        border-right: 2px solid var(--color-secondary);
         text-align: right;
         padding-right: 1rem;
     }
+/* footer */
     .contact{
-        border-right: 2px solid rgb(59, 59, 135);
+        border-right: 2px solid var(--color-secondary);
         text-align: right;
         padding-right: 1rem;
-
-    }
-    footer ul {
-        display: flex;
-        justify-content: space-between;
-        align-items: center;
-        font-size: 2rem;
-      }
-      
-      footer a {
-        color: rgb(59, 59, 135);
-        border-bottom: 2px solid rgb(59, 59, 135);
-        text-align: justify;
-        flex-grow: 1;
-        margin: 0 10px;
-      }
+   }
 }
+/* media queries small screen */
 @media screen and (max-width:768px){
     .box{
         position: relative;
@@ -166,9 +193,7 @@ article img:hover{
         justify-content: center;
     }
     article img{
-    
         width: 100vw;
-    
     }
     .main{
         width: 100vw;
