--- a/styles.css
+++ b/styles.css
@@ -68,7 +68,7 @@ nav a {
     justify-content: flex-end;
     position: absolute;
     background-color: var(--color-primary);
-    margin-left: 45%;
+    margin-left: 55%;
     margin-top: 6rem;
 }
 /* about */
@@ -120,6 +120,7 @@ footer a {
     color: rgb(59, 59, 135);
     border-bottom: 2px solid var(--color-secondary);
     font-size: 2rem;
+    margin-left: -1rem;
 }
 /* media queries large screen */
 @media screen and (min-width:768px){
@@ -140,7 +141,7 @@ footer a {
         grid-row: span 1;
         border-right: 4px solid var(--color-secondary);
         margin-right: 1rem;
-        font-size: 3rem;
+        font-size: 2.5rem;
         text-align: right;
     }
  /* grid */
